obs/daemon-featboost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daemon-deployment
  labels:
    app: daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daemon
  template:
    metadata:
      labels:
        app: daemon
    spec:
      volumes:
      - name: daemon-pv-storage
        persistentVolumeClaim:
          claimName: daemon-pv-claim
      containers:
      - name: daemon
        image: iterum/daemon:latest
        resources:
          requests:
            cpu: "2000m"
            memory: "2048Mi"
        ports:
        - containerPort: 3000
          hostPort: 3000
          name: http
        volumeMounts:
        - mountPath: "/localStorage/"
          name: daemon-pv-storage
---
kind: Service
apiVersion: v1
metadata:
  name: daemon-service
spec:
  selector:
    app: daemon
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 3000
  type: ClusterIP
