obs/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iterum-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: daemon-service
          servicePort: 3000
